--- a/EventManager/templates/Pages/event_list.html
+++ b/EventManager/templates/Pages/event_list.html
@@ -14,6 +14,7 @@
           <th>Fecha Inicio</th>
           <th>Fecha Fin</th>
           <th>Tipo Evento</th>
+          <th>Borrar</th>
       </tr>
     </thead>
     <tbody>
@@ -26,6 +27,7 @@
             <td>{{ event.startDate}}</td>
             <td>{{ event.finishDate}}</td>
             <td>{{ event.get_eventType_display}}</td>
+            <td><a href="{% url 'event_delete' event.id %}">Borrar</a></td>
         </tr>
       {% empty %}
         <tr class="table-active">
